# naromat

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
docs/: aliases.js  search-index.js  settings.html  source-files.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/naromat/: all.html  index.html  sidebar-items.js
docs/naromat/entities/: index.html  sidebar-items.js
docs/naromat/entities/chapter/: index.html  sidebar-items.js  struct.Chapter.html
docs/naromat/entities/file/: index.html  sidebar-items.js  struct.TextFile.html
docs/naromat/entities/line/: index.html  sidebar-items.js  struct.Line.html
docs/naromat/entities/sentence/: index.html  sidebar-items.js  struct.Sentence.html
docs/naromat/entities/text_file/: index.html  struct.TextFile.html
docs/naromat/errors/: enum.DirectoryProcessError.html  enum.FileProcessError.html  enum.InvalidPathError.html  enum.TextFileOutputError.html  index.html  sidebar-items.js
docs/src/naromat/: entities.rs.html  errors.rs.html  lib.rs.html
docs/src/naromat/entities/: chapter.rs.html  file.rs.html  line.rs.html  sentence.rs.html  text_file.rs.html
resources/test/entities/file/: reference.txt
src/: entities.rs  errors.rs  lib.rs  main.rs
src/entities/: chapter.rs  document_element.rs  file.rs  line.rs  sentence.rs  text_file.rs
(+1 files in other folders)
