[package]
name = "naromat"
version = "0.3.0"
authors = ["Hitomaru Horino <type10tk@kahi-sv.info>"]
edition = "2018"
documentation = "https://hitomaru.github.io/naromat/"
repository = "https://github.com/Hitomaru/naromat"
license-file = "LICENSE"
readme = "README.md"
description = "Convert text to narou novel format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
clap = "2"

[dev-dependencies]
file_diff = "1.0.0"